# hackprinceton

./: .gitignore  49_gemma4_tle_calibration.json  49_gemma4_truthfulqa.json  49_gemma4_udc_calibration.json  50_gemma_feature_sweep_bench2.json  50_gemma_feature_sweep_truthfulqa.json  COLAB_GPU.md  PROJECT_STATUS.md  README.md  gemma4_wrong_example_median.json  hackprinceton_writeup.md  pyproject.toml  requirements.txt
app/: __init__.py  calibration.py  confab.py  datasets.py  demo_example_validation.json  demo_example_validation_rows.csv  demo_examples.py  eval_utils.py  examples.py  feature_metrics.py  gemini_client.py  geometry.py  hp_datasets.py  k2_client.py  live_analysis.py  scoring.py  text_utils.py  udc_engine.py  visualization.py
experiments/: 49_gemma4_trajectory.py  50_gemma_feature_sweep.py  51_demo_cases.py  51b_score_handcrafted.py  51c_short_format.py  52_mistral7b_trajectory.py  53_qwen25_trajectory.py
notebooks/: gemma_results_colab.ipynb
scripts/: __init__.py  analyze_once.py  build_demo_data_bundle.py  calibrate_thresholds.py  generate_evals.py  precompute_demo_geometry.py  score_gemini_eval_dataset.py  smoke_component1_cpu.py  validate_demo_examples.py
tests/: test_calibration.py  test_confab_audit.py  test_confab_k2.py  test_demo_data_consistency.py  test_demo_examples.py  test_eval_utils.py  test_examples.py  test_gemini_client.py  test_geometry.py  test_k2_client.py  test_live_analysis.py  test_score_gemini_eval_dataset.py  test_scoring.py  test_text_utils.py  test_udc_engine_integration.py  test_udc_engine_math.py  test_visualization.py  (+1 more)
(+7 files in other folders)
